--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				name: "Cold Brew",
 				pic: "largebucks-coffee-10072015/images/cold-brew.jpg",
 				alt: "Cold Brew Coffee",
-				color: "blue",
+				color: "lightblue",
 				day: "Wednesday",
 				desc: `It seems like it's deja brew`
 			};
