--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link id="mainStylesheet" rel="stylesheet" href="css/default.css" />
     <style type="text/css">
 	
-        html {background-color:#FF7518;/* pumpkin - overwrites default */}
+        html {background-color:wheat;/* pumpkin - overwrites default */}
         
         .feature {color:#FF7518; /* daily feature color - pumpkin! */}
         
@@ -45,15 +45,16 @@
 </head>
 <body>
 	<header>
-	    <img src="images/largebucks-logo.jpg" alt="You drink our coffee, we make large bucks!" class="flexible" id="logo" />
+	    <img src="largebucks-coffee-10072015/images/largebucks-logo.jpg" alt="You drink our coffee, we make large bucks!" class="flexible" id="logo" />
 		<h1 class="masthead">LARGEBUCK$ COFFEE</h1>
 		<nav>
+            <h3> Check out our reccomended recipes to make delicous coffee at home!</h3>
 			<ul>
-				<li><a href="#">Sample Link</a></li>
-                <li><a href="#">Sample Link</a></li>
-                <li><a href="#">Sample Link</a></li>
-                <li><a href="#">Sample Link</a></li>
-                <li><a href="#">Sample Link</a></li>
+				<li><a style="color: inherit" href="https://thewoksoflife.com/bubble-tea/">Boba</a></li>
+                <li><a style="color: inherit" href="https://www.allrecipes.com/recipe/235850/starbucks-caramel-frappuccino-copycat-recipe/">Frappuccino</a></li>
+                <li><a style="color: inherit" href="https://cooking.nytimes.com/recipes/1017355-cold-brewed-iced-coffee">Cold Brew</a></li>
+                <li><a style="color: inherit" href="https://www.inspiredtaste.net/8419/pumpkin-spice-latte-at-home-recipe/">Pumpkin Spice Latte</a></li>
+                <li><a style="color: inherit"  href="https://www.allrecipes.com/recipe/23538/mocha-coffee/">Mocha</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -75,13 +76,13 @@
 		</p>
 
 		<h3>Click below to view coffee specials for other days of the week</h3>
-		<p><a href="?day=0">Sunday</a></p>
-		<p><a href="?day=1">Monday</a></p>
-		<p><a href="?day=2">Tuesday</a></p>
-		<p><a href="?day=3">Wednesday</a></p>
-		<p><a href="?day=4">Thursday</a></p>
-		<p><a href="?day=5">Friday</a></p>
-		<p><a href="?day=6">Saturday</a></p>
+		<p><a style="color: inherit" href="?day=0">Sunday</a></p>
+		<p><a style="color: inherit" href="?day=1">Monday</a></p>
+		<p><a style="color: inherit" href="?day=2">Tuesday</a></p>
+		<p><a style="color: inherit" href="?day=3">Wednesday</a></p>
+		<p><a style="color: inherit" href="?day=4">Thursday</a></p>
+		<p><a style="color: inherit" href="?day=5">Friday</a></p>
+		<p><a style="color: inherit" href="?day=6">Saturday</a></p>
 
 
 
@@ -92,8 +93,8 @@
      </main>
     <footer>
       <small>&copy; 2014-2015, All Rights Reserved ~
-      <a href="http://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~
-      <a href="http://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a>
+      <a style="color: inherit" href="http://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~
+      <a style="color: inherit" href="http://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a>
       </small>
     </footer>
     <!-- END Footer -->
@@ -101,7 +102,7 @@
 
 		function coffeeTemplate(coffee){
 			let myReturn =`<p>
-    			 <img src="${coffee.pic}" alt="${coffee.alt}" id="coffee" /> <strong>${coffee.day}'s Coffee Special:</strong>${coffee.day}'s daily coffee special is <strong class="feature">${coffee.name}</strong>, ${coffee.desc}</p>`;
+    			 <img src="${coffee.pic}" alt="${coffee.alt}" id="coffee"/> <strong>${coffee.day}'s Coffee Special:</strong>${coffee.day}'s daily coffee special is <strong class="feature">${coffee.name}</strong>, ${coffee.desc}</p>`;
 			return myReturn;
 		}
 
@@ -171,7 +172,7 @@
 				name: "Cold Brew",
 				pic: "largebucks-coffee-10072015/images/cold-brew.jpg",
 				alt: "Cold Brew Coffee",
-				color: "lightblue",
+				color: "blue",
 				day: "Wednesday",
 				desc: `It seems like it's deja brew`
 			};
@@ -215,7 +216,7 @@
 
 	document.getElementById('mydiv').innerHTML = coffeeTemplate(coffee);
 	document.querySelector('.feature').style.color = coffee.color;
-	document.querySelector('html').style.backgroundColor = coffee.color;
+	document.querySelector('html').style.backgroundColor = style.color;
 
 	console.log(coffee);
 
